# Image-Hosting-Application

./: .dockerignore  Makefile  README.md  docker-compose.yml
services/backend/: .env.example  Dockerfile
services/backend/src/: alembic.ini  main.py  pyproject.toml
services/backend/src/api/: routes_auth.py  routes_upload.py
services/backend/src/db/: cleanup_scheduler.py  crud.py  database.py  models.py
services/backend/src/handlers/: upload.py
services/backend/src/interfaces/: protocols.py
services/backend/src/middleware/: request_id.py
services/backend/src/migrations/: env.py
services/backend/src/migrations/versions/: 1040013f41a1_initial.py
services/backend/src/schemas/: upload.py
services/backend/src/scripts/: entrypoint.sh  wait-for-db.sh
services/backend/src/settings/: config.py  logging_config.py
services/backend/src/utils/: auth_utils.py  rate_limiter.py
services/backup/: Dockerfile  backup.sh  crontab
services/frontend/: index.html  upload.html
services/frontend/css/: upload.css  viewer.css
services/frontend/js/: modal.js  tabs.js  upload.js  viewer.js
services/frontend/templates/: viewer.html
services/nginx/: nginx.conf
services/pgbouncer/: Dockerfile  entrypoint.sh  pgbouncer.ini.template
